# SysML_project

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  launch.sh  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: add_internal_block_diagrams_table.py
backend/app/: main.py
backend/app/AI/: diagram_generation.py
backend/app/api/: api.py  api_v1.py
backend/app/core/: config.py  redis_client.py
backend/app/crud/: crud_ibd.py
backend/app/database/: db.py  embeddings.py  init.sql  models.py  rag_router.py
backend/app/db/: dependencies.py  session.py
backend/app/diagrams/: create_diagram.py  ibd_router.py
backend/app/test/: ping.py
docs/: realistic_plan.md
frontend/: Dockerfile  index.html  main.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Canvas.tsx  DiagramEditor.tsx  DiagramGenerator.tsx  DiagramGeneratorNew.tsx  DiagramTabs.tsx  DiagramWorkspace.tsx  ErrorBoundary.tsx  LoadingAnimation.tsx  NewDiagramEditor.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx  ValidationPanel.tsx
frontend/src/components/custom/: AutosaveIndicator.tsx  ContextMenu.tsx  EditableText.tsx  KeyboardShortcutsPanel.tsx  NodeEditModal.tsx
frontend/src/components/icons/: AdaptiveIbdIcon.tsx  nodeColors.ts
frontend/src/components/nodes/: ActivityNode.tsx  ActorNode.tsx  BlockNode.tsx  ConnectionNode.tsx  (+6 more)
frontend/src/hooks/: useAIGeneration.ts  useNodeConnections.ts
frontend/src/models/: SysMLNodeFactories.tsx  SysMLNodeModels.ts  SysMLNodeModels.tsx
frontend/src/store/: diagramStore.ts  newDiagramStore.ts
frontend/src/styles/: diagrams.css  index.css
frontend/src/types/: ValidationPanel.d.ts
frontend/src/utils/: animationController.ts  dagreLayout.ts  diagramEngineUtils.ts  diagramGeneratorUtils.ts  diagramUtils.ts  historyUtils.ts  layoutUtils.ts  linkOptimizer.ts  linkUtils.ts  renderUtils.ts  sysmlUtils.ts  validationUtils.ts  xmiExport.ts  xmiExportUtils.ts
(+6 files in other folders)
