[project]
name = "sysml-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pgvector[sqlalchemy] (>=0.4.0,<0.5.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "semantic-kernel (>=1.26.1,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "scikit-learn (>=1.6.0,<1.7.0)",
    "numpy (>=2.2.0,<2.3.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-core (>=0.3.49,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
