[project]
name = "sysml-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "openai (>=1.14.3,<2.0.0)",
    "sqlalchemy (>=2.0.21,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
    "pgvector (>=0.2.5,<0.3.0)",
    "redis (>=5.0.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
